deploy/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    namespace: test
    istio-injection: enabled
