deploy/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: test
  labels:
    app: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          image: ghcr.io/ricoberger/echoserver:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
