deploy/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: echoserver
